==> CalebKang/SST26VF0x2B-STLDR/Src/Loader_Src.c <==
#include "main.h"
#include "quadspi.h"
#include "gpio.h"
#include "Loader_Src.h"
#include "Dev_Inf.h"
#include <stdio.h>

KeepInCompilation int SectorErase (uint32_t EraseStartAddress ,uint32_t EraseEndAddress)
{
  uint32_t BlockAddr;
  EraseStartAddress = EraseStartAddress - (EraseStartAddress % 0x1000);

  while (EraseEndAddress >= EraseStartAddress)
  {
    BlockAddr = EraseStartAddress & 0x7FFFFF;
    if(EraseSector(BlockAddr) != 1)
    {
      return 0;
    }
    EraseStartAddress += 0x1000;
  }

  return 1;
}

KeepInCompilation uint64_t Verify (uint32_t MemoryAddr, uint32_t RAMBufferAddr, uint32_t Size, uint32_t missalignement)
{
  uint32_t VerifiedData = 0, InitVal = 0;
  uint64_t checksum;
  Size*=4;

  if(QUADSPI_MappedMode(&hqspi)!=1)
    return 0;

  checksum = CheckSum((uint32_t)MemoryAddr + (missalignement & 0xF), Size - ((missalignement >> 16) & 0xF), InitVal);
  while (Size>VerifiedData)
  {
    if ( *(uint8_t*)MemoryAddr++ != *((uint8_t*)RAMBufferAddr + VerifiedData))
      return ((checksum<<32) + (MemoryAddr + VerifiedData));

    VerifiedData++;
  }

  return (checksum<<32);
}

KeepInCompilation int Read (uint32_t Address, uint32_t Size, uint16_t* buffer)
{
  sCommand.AlternateByteMode = QSPI_ALTERNATE_BYTES_NONE;
  sCommand.AlternateBytesSize = 0;
  sCommand.InstructionMode = QSPI_INSTRUCTION_1_LINE;
  sCommand.Instruction = 0xEB;
  sCommand.AddressMode = QSPI_ADDRESS_4_LINES;
  sCommand.Address     = Address;
  sCommand.DataMode    = QSPI_DATA_4_LINES;
  sCommand.NbData      = Size;
  sCommand.DummyCycles = 6; //no * 2

  if (HAL_QSPI_Command(&hqspi, &sCommand, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  if (HAL_QSPI_Receive(&hqspi, (uint8_t *)buffer, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  return 1;
}

int Init(uint8_t configureMemoryMappedMode)
{
  /* USER CODE BEGIN 1 */

  /* USER CODE END 1 */
  

  /* MCU Configuration--------------------------------------------------------*/

  /* Reset of all peripherals, Initializes the Flash interface and the Systick. */
  HAL_Init();

  /* USER CODE BEGIN Init */

  /* USER CODE END Init */

  /* Configure the system clock */
  SystemClock_Config();

  /* USER CODE BEGIN SysInit */

  /* USER CODE END SysInit */

  /* Initialize all configured peripherals */
  MX_GPIO_Init();
  MX_QUADSPI_Init();
  /* USER CODE BEGIN 2 */

  sCommand.AlternateByteMode = QSPI_ALTERNATE_BYTES_NONE;
  sCommand.AlternateBytesSize = 0;
  sCommand.InstructionMode   = QSPI_INSTRUCTION_1_LINE;
  sCommand.AddressSize       = QSPI_ADDRESS_24_BITS;
  sCommand.DdrMode           = QSPI_DDR_MODE_DISABLE;
  sCommand.DdrHoldHalfCycle  = QSPI_DDR_HHC_ANALOG_DELAY;
  sCommand.SIOOMode          = QSPI_SIOO_INST_EVERY_CMD;


  QSPI_WriteEnable(&hqspi);

  /* write configuration register SPI Quad mode write*/
  sCommand.AlternateByteMode = QSPI_ALTERNATE_BYTES_NONE;
  sCommand.AlternateBytesSize = 0;
  sCommand.Instruction = WRITE_STATUS_REG_CMD;
  sCommand.AddressMode = QSPI_ADDRESS_NONE;
  sCommand.DataMode    = QSPI_DATA_1_LINE;
  sCommand.DummyCycles = 0;
  sCommand.NbData      = 2;

  if (HAL_QSPI_Command(&hqspi, &sCommand, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  uint8_t tx[2] = {0x00, 0x0A};

  if (HAL_QSPI_Transmit(&hqspi, tx, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  /* read configuration register SPI Quad mode read */
  sCommand.AlternateByteMode = QSPI_ALTERNATE_BYTES_NONE;
  sCommand.AlternateBytesSize = 0;
  sCommand.Instruction = ENTER_QUAD_CMD;
  sCommand.AddressMode = QSPI_ADDRESS_NONE;
  sCommand.NbData      = 1;

  if (HAL_QSPI_Command(&hqspi, &sCommand, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  uint8_t reg;

  if (HAL_QSPI_Receive(&hqspi, &reg, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

  if(reg != 0x0A)
  {
    Error_Handler();
  }

  /* Global Block Protection Unlock */
  QSPI_WriteEnable(&hqspi);

  sCommand.AlternateByteMode = QSPI_ALTERNATE_BYTES_NONE;
  sCommand.AlternateBytesSize = 0;
  sCommand.InstructionMode = QSPI_INSTRUCTION_1_LINE;
  sCommand.Instruction = 0x98;
  sCommand.AddressMode = QSPI_ADDRESS_NONE;
  sCommand.Address     = 0x000000;
  sCommand.DataMode    = QSPI_DATA_NONE;
  sCommand.NbData      = 0;
  sCommand.DummyCycles = 0;

//  CmdCplt = 0;
  if (HAL_QSPI_Command(&hqspi, &sCommand, HAL_QPSI_TIMEOUT_DEFAULT_VALUE) != HAL_OK)
  {
    Error_Handler();
  }

//  while(CmdCplt == 0);

  QSPI_AutoPollingMemReady(&hqspi);

  HAL_Delay(1);
  /* USER CODE END 2 */

  /* Infinite loop */
  /* USER CODE BEGIN WHILE */
#if 0
  while (1)
  {
    /* USER CODE END WHILE */

    /* USER CODE BEGIN 3 */
  }
#endif

  if(!configureMemoryMappedMode)
  {
    if(QUADSPI_MappedMode(&hqspi) !=1)
      return 0; //fail
  }

  return 1;
  /* USER CODE END 3 */
}
