==> kotetsuy/STLDR/W25Q128_STM32F412ZG/Core/Src/Loader_Src.c <==
#include "main.h"
#include "w25q128jv_ll.h"
#include "debug.h"

int Init(uint8_t MemMappedMode)
{
#ifdef KYDEBUG
    LL_GPIO_InitTypeDef gpioInit = {0};
#endif
    hqspi.Instance = QUADSPI;
    __HAL_QSPI_DISABLE(&hqspi);
    __HAL_RCC_QSPI_FORCE_RESET();
    for (int32_t i = 0; i < 1000; i++) {
        dummy = i;
    }
    __HAL_RCC_QSPI_RELEASE_RESET();
    memset(&hqspi, 0, sizeof(QSPI_HandleTypeDef));
    HAL_QSPI_DeInit(&hqspi);
    HAL_DeInit();
    ResetClock_Config();
    
    HAL_Init();

    /* Configure the system clock */
    SystemClock_Config();


    /* Initialize all configured peripherals */
    MX_GPIO_Init();
    MX_QUADSPI_Init();
    W25Q128JV_Init();
#ifdef KYDEBUG
    gpioInit.Pin = LL_GPIO_PIN_14;
    gpioInit.Mode = LL_GPIO_MODE_OUTPUT;
    LL_GPIO_Init(GPIOB, &gpioInit);
    LL_GPIO_TogglePin(GPIOB, LL_GPIO_PIN_14);
#endif
    return 1;

}

int SectorErase (uint32_t EraseStartAddress ,uint32_t EraseEndAddress)
{
#ifdef KYDEBUG
    LL_GPIO_InitTypeDef gpioInit = {0};
#endif
    uint32_t BlockAddr;
        
    if (EraseStartAddress >= 0x90000000) {
        EraseStartAddress -= 0x90000000;
    }
    if (EraseEndAddress >= 0x90000000) {
        EraseEndAddress -= 0x90000000;
    }

#ifdef KYDEBUG
    gpioInit.Pin = GPIO_PIN_7;
    gpioInit.Mode = GPIO_MODE_OUTPUT_PP;
    LL_GPIO_Init(GPIOB, &gpioInit);
    LL_GPIO_TogglePin(GPIOB, GPIO_PIN_7);
#endif
    EraseStartAddress = EraseStartAddress -  EraseStartAddress % 0x10000;

    while (EraseEndAddress>=EraseStartAddress)
    {
        BlockAddr = EraseStartAddress & 0x0FFFFFFF;
        W25Q128JV_EraseBlock( BlockAddr);
        W25Q128JV_AutoPollingMemReady();
        EraseStartAddress += 0x10000;
    }
#ifdef KYDEBUG
    gpioInit.Pin = GPIO_PIN_7;
    gpioInit.Mode = GPIO_MODE_OUTPUT_PP;
    LL_GPIO_Init(GPIOB, &gpioInit);
    LL_GPIO_TogglePin(GPIOB, GPIO_PIN_7);
#endif
    return 1;
}

int Read (uint32_t Address, uint32_t Size, uint8_t* Buffer)
{
#ifdef KYDEBUG
    LL_GPIO_InitTypeDef gpioInit = {0};
#endif
#if 1
    int i = 0;

    W25Q128JV_MemoryMapped();
        
        
    for (i=0; i < Size;i++)
    {
        *(uint8_t*)Buffer++ = *(uint8_t*)Address;
        Address ++;
    }
#else
    int32_t l, size;
    if (Address >= 0x90000000) {
        Address -= 0x90000000;
    }
    size = (int32_t)Size;

    while (size > 0) {
        l = size % 0x10000;
        if (l == 0 && size >= 0x10000) {
            l = 0xffff;
        }
        W25Q128JV_ReadFast1Line(Address, Buffer, l);
        size -= l;
        Buffer += l;
        Address += l;
    }
#endif
#ifdef KYDEBUG
    gpioInit.Pin = GPIO_PIN_0;
    gpioInit.Mode = GPIO_MODE_OUTPUT_PP;
    LL_GPIO_Init(GPIOB, &gpioInit);
    LL_GPIO_TogglePin(GPIOB, GPIO_PIN_0);
#endif
    return 1;
}

int Verify (uint32_t MemoryAddr, uint32_t RAMBufferAddr, uint32_t Size)
{
#ifdef KYDEBUG
    LL_GPIO_InitTypeDef gpioInit = {0};
#endif
    uint32_t VerifiedData = 0;
    Size*=4;

    W25Q128JV_MemoryMapped();

    while (Size>VerifiedData)
    {
        if ( *(uint8_t*)MemoryAddr++ != *((uint8_t*)RAMBufferAddr + VerifiedData))
            return (MemoryAddr + VerifiedData);

        VerifiedData++;
    }
#ifdef KYDEBUG
    gpioInit.Pin = GPIO_PIN_0;
    gpioInit.Mode = GPIO_MODE_OUTPUT_PP;
    LL_GPIO_Init(GPIOB, &gpioInit);
    LL_GPIO_TogglePin(GPIOB, GPIO_PIN_0);
#endif
    return 1;
}
